@@ -4,7 +4,7 @@ import { twMerge } from "tailwind-merge";
 
 const variantStyles = {
   default: "",
-  border: "border-2 rounded-full border-gray-300",
+  border: "border-2 rounded-full border-white",
   online: "relative",
 };
 
@@ -14,11 +14,9 @@ export const ProfilePictureXs: React.FC<ProfilesProps> = ({
 }) => {
   return (
     <Profiles
-    className={twMerge(variantStyles.online, className)}
-    imageSrc={imageSrc}
-    size="xs"
-    variant="online"
-    border
+      className={twMerge(variantStyles.default, className)}
+      imageSrc={imageSrc}
+      size="xs"
     />
   );
 };
@@ -57,7 +55,7 @@ export const ProfilePictureLg: React.FC<ProfilesProps> = ({
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
-      size="md"
+      size="lg"
     />
   );
 };
@@ -70,7 +68,194 @@ export const ProfilePictureXl: React.FC<ProfilesProps> = ({
     <Profiles
       className={twMerge(variantStyles.default, className)}
       imageSrc={imageSrc}
+      size="xl"
+    />
+  );
+};
+
+export const ProfilePictureXxl: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.default, className)}
+      imageSrc={imageSrc}
+      size="xxl"
+    />
+  );
+};
+
+export const ProfilePictureXsBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc = "/public/Ellipse2.svg",
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
+      size="xs"
+    />
+  );
+};
+
+export const ProfilePictureSmBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc = "/public/Ellipse2.svg",
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
+      size="sm"
+    />
+  );
+};
+
+export const ProfilePictureMdBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
       size="md"
+    />
+  );
+};
+
+export const ProfilePictureLgBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
+      size="lg"
+    />
+  );
+};
+
+export const ProfilePictureXlBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
+      size="xl"
+    />
+  );
+};
+
+export const ProfilePictureXxlBorder: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      className={twMerge(variantStyles.border, className)}
+      imageSrc={imageSrc}
+      size="xxl"
+    />
+  );
+};
+
+export const ProfilePictureXsOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc = "/public/Ellipse2.svg",
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineXs"
+      size="xs"
+      variant="online"
+    />
+  );
+};
+
+export const ProfilePictureSmOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc = "/public/Ellipse2.svg",
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineSm"
+      size="sm"
+      variant="online"
+    />
+  );
+};
+
+export const ProfilePictureMdOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineMd"
+      size="md"
+      variant="online"
+    />
+  );
+};
+
+export const ProfilePictureLgOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineLg"
+      size="lg"
+      variant="online"
+    />
+  );
+};
+
+export const ProfilePictureXlOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineXl"
+      size="xl"
+      variant="online"
+    />
+  );
+};
+
+export const ProfilePictureXxlOnline: React.FC<ProfilesProps> = ({
+  className,
+  imageSrc,
+}) => {
+  return (
+    <Profiles
+      border
+      className={twMerge(variantStyles.online, className)}
+      imageSrc={imageSrc}
+      onlineSize="onlineXxl"
+      size="xxl"
+      variant="online"
     />
   );
 };
