@@ -7,6 +7,7 @@ export type ProfilesProps = {
   imageSrc?: string;
   className?: string;
   border?: boolean;
+  onlineSize?: "onlineXs" | "onlineSm" | "onlineMd" | "onlineLg" | "onlineXl" | "onlineXxl"
 };
 
 export const Profiles: React.FC<ProfilesProps> = ({
@@ -15,22 +16,31 @@ export const Profiles: React.FC<ProfilesProps> = ({
   imageSrc = "/Ellipse2.svg",
   size = "xs",
   variant = "default",
+  onlineSize = "onlineXs"
 }) => {
-  // Estilos según el tamaño del avatar
+  
   const sizeStyles = {
-    xs: "w-6 h-6",
-    sm: "w-8 h-8",
-    md: "w-10 h-10",
-    lg: "w-12 h-12",
-    xl: "w-16 h-16",
-    xxl: "w-20 h-20",
+    xs: "w-6",
+    sm: "w-8",
+    md: "w-10",
+    lg: "w-12",
+    xl: "w-14",
+    xxl: "w-16",
   };
 
-  // Estilos del borde si está activo
-  const borderStyle = border ? "border-2 border-gray-300 rounded-full" : "";
+  const sizeOnline = {
+    onlineXs: "w-2 h-2",
+    onlineSm: "w-2.5 h-2.5",
+    onlineMd: "w-3 h-3",
+    onlineLg: "w-3.5 h-3.5",
+    onlineXl: "w-4 h-4",
+    onlineXxl: "w-5 h-5",
+  }
+
+  const borderStyle = border ? "border-2 border-white rounded-full" : "";
 
   return (
-    <div className={twMerge("relative flex items-center", className)}>
+    <div className={twMerge("relative flex items-center w-", className)}>
       <img
         src={imageSrc}
         alt="Profile"
@@ -44,8 +54,8 @@ export const Profiles: React.FC<ProfilesProps> = ({
       {variant === "online" && (
         <span
           className={twMerge(
-            "absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white",
-            
+            "absolute bottom-0 right-0 bg-green-500 rounded-full border-2 border-white",
+            sizeOnline[onlineSize]
           )}
         />
       )}
